# schrodinger

./: .env.template  .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  TODO.md  detect_yolo.py  docker-compose.yml  main.py  pyproject.toml
.minio/: configure.sh  policy.json
clients/web/: Dockerfile
migrations/: env.py
migrations/versions/: 3c7dd296dd4d_initial_migration.py
server/: .env.template  CLAUDE.md  Dockerfile  docker-compose.yml  init-readonly-user.sql  pyproject.toml
server/doc/: arch.excalidraw
server/migrations/: env.py
server/migrations/versions/: 3c7dd296dd4d_initial_migration.py  97bc5f9cc094_update_event_columns.py
server/src/schrodinger/: api.py  app.py  celery.py  config.py  logfire.py  logging.py  postgres.py  redis.py
server/src/schrodinger/detection/: detection.py  tasks.py
server/src/schrodinger/event/: endpoints.py  repository.py  schemas.py  service.py
server/src/schrodinger/file/: endpoints.py  service.py
server/src/schrodinger/health/: checks.py  endpoints.py  schemas.py
server/src/schrodinger/integrations/aws/s3/: client.py  schemas.py  service.py
server/src/schrodinger/kit/db/: postgres.py
server/src/schrodinger/kit/repository/: base.py
server/src/schrodinger/models/: __init__.py  event.py
server/src/schrodinger/stream/: capture.py  tasks.py
server/src/schrodinger/worker/: sqlalchemy.py
server/src/schrodinger_server/: api.py  app.py  celery.py  config.py  exceptions.py  logfire.py  logging.py  postgres.py  redis.py
server/src/schrodinger_server/detection/: endpoints.py  tasks.py
server/src/schrodinger_server/event/: endpoints.py  repository.py  schemas.py  service.py
server/src/schrodinger_server/file/: endpoints.py
server/src/schrodinger_server/health/: checks.py  endpoints.py  schemas.py
server/src/schrodinger_server/integrations/aws/s3/: client.py  exceptions.py  schemas.py  service.py
server/src/schrodinger_server/kit/: schemas.py
server/src/schrodinger_server/kit/db/: postgres.py
server/src/schrodinger_server/kit/db/models/: __init__.py  base.py
server/src/schrodinger_server/kit/repository/: base.py
server/src/schrodinger_server/models/: __init__.py  event.py
server/src/schrodinger_server/stream/: capture.py  tasks.py
server/src/schrodinger_server/worker/: redis.py  s3.py  sqlalchemy.py
server/tests/: conftest.py  test_detection.py
(+43 files in other folders)
