[project]
name = "schrodinger_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benjamin Fovet", email = "b.fovet@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.30.0",
    "boto3>=1.40.35",
    "celery[redis]>=5.5.3",
    "fastapi[standard]>=0.116.2",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "logfire[celery,fastapi,httpx,redis,sqlalchemy,system-metrics]>=4.15.1",
    "opencv-python>=4.12.0.88",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "structlog>=25.5.0",
    "torch>=2.7.0,<2.8",
    "torchvision>=0.22.0,<0.23",
    "types-boto3[s3]>=1.40.35",
    "ultralytics>=8.3.202",
    "uvloop>=0.21.0",
]

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.13.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.fastapi]
entrypoint = "schrodinger_server.app:app"
